# typist

./: .gitignore  CLAUDE.md  MANIFEST.SKIP  Makefile.PL  README.md  cpanfile  cpanfile.snapshot  mise.toml  mkdocs.yml
bench/: 00_import.pl  01_parser.pl  02_subtype.pl  03_type_ops.pl  04_registry.pl  05_inference.pl  06_analyzer.pl  07_constructor.pl  08_runtime_overhead.pl  09_analyzer_phases.pl
docs/: GADT_IMPLEMENTATION_PLAN.md  architecture.md  builtin-type-registration.md  comprehensive-review.md  conventions.md  critical-review.md  getting-started.md  improvement-plan.md  index.md  lsp-coverage.md  review.md  static-analysis.md  type-system.md
example/: 01_foundations.pl  02_composite_types.pl  03_generics.pl  04_nominal_types.pl  05_algebraic_types.pl  06_typeclasses.pl  07_effects.pl  08_gradual_typing.pl  09_dsl.pl  10_higher_order.pl  11_static_errors.pl  12_method_chains.pl  13_contracts.pl  14_scoped_effects.pl  basics.pl  effect_checker.pl  effects.pl  errors_advanced.pl  errors_basic.pl  generics.pl  gradual.pl  haskell.pl  lsp_demo.pm  lsp_effects.pm
lib/: Typist.pm
script/: lsp-replay  lsp-verify-workspace
t/: 00_compile.t  01_parser.t  01b_parser_edge.t  02_subtype.t  02b_subtype_edge.t  03_attribute.t  04_inference.t  05_integration.t  06_instance.t  06b_registry_unregister.t  07_multivar.t  08_literal.t  09_newtype.t  10_recursive.t  11_bounded.t  12_typeclass.t  13_hkt.t  (+24 more)
tools/pygments-typist/: pygments_typist.py  pyproject.toml
tools/pygments-typist/pygments_typist.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+211 files in other folders)
